--- a/Shopping.WebUI/Views/Item/Index.cshtml
+++ b/Shopping.WebUI/Views/Item/Index.cshtml
@@ -1,41 +1,48 @@
-﻿@model Shopping.WebUI.Models.AddItemModel
+﻿@using System.Reflection.Emit
+@using Microsoft.AspNetCore.Mvc.Localization
+
+
+@inject IViewLocalizer Localizer
+@model Shopping.WebUI.Models.AddItemModel
 @{
     ViewData["Title"] = "Item Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Add item</h1>
+    <h1 class="display-4">@Localizer["Add item"]</h1>
 </div>
 
 <form asp-action="AddItem" method="post" asp-controller="Item">
     <div class="form-group">
-        <label asp-for="Name"></label>
+        <label> @Localizer["Name"] </label>
         <input asp-for="Name" class="form-control"/>
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Price"></label>
+        <label> @Localizer["Price"] </label>
         <input asp-for="Price" class="form-control" />
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Quantity"></label>
+        <label>@Localizer["Quantity"]</label>
         <input asp-for="Quantity" class="form-control"/>
         <span asp-validation-for="Quantity" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="CategoryId"></label>
+        <label>@Localizer["CategoryId"]</label>
         <select asp-for="CategoryId" class="form-control" asp-items="@(ViewBag.Categories as List<SelectListItem>)">
-            <option value="">-- Select Category --</option>
+            <option value="">@Localizer["Select Category"] -</option>
         </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="ShoppingListId"></label>
-        <input asp-for="ShoppingListId" class="form-control"/>
+        <label>@Localizer["ShoppingListId"]</label>
+        <select asp-for="ShoppingListId" class="form-control" asp-items="@(ViewBag.ShoppingLists as List<SelectListItem>)">
+            <option value="">@Localizer["Select Shopping List"]</option>
+        </select>
         <span asp-validation-for="ShoppingListId" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Add Item</button>
+    <button type="submit" class="btn btn-primary">@Localizer["Add item"]</button>
 </form>
 
 @section Scripts
