Add Mediator, add CQRS, changed controllers

--- a/Shopping.WebUI/Views/Shared/_Layout.cshtml
+++ b/Shopping.WebUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using System.Globalization
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -27,6 +30,13 @@
                     </li>
                 </ul>
             </div>
+            <form method="get" asp-controller="Language" asp-action="Change" class="d-flex ms-2">
+                <select name="culture" onchange="this.form.submit()" class="form-select form-select-sm">
+                    <option value="en-GB" selected="@(CultureInfo.CurrentUICulture.Name == "en-GB")">English</option>
+                    <option value="uk" selected="@(CultureInfo.CurrentUICulture.Name == "uk")">Українська</option>
+                </select>
+                <input type="hidden" name="returnUrl" value="@Context.Request.Path" />
+            </form>
         </div>
     </nav>
 </header>
