--- a/Shopping.WebUI/Views/Shared/_Layout.cshtml
+++ b/Shopping.WebUI/Views/Shared/_Layout.cshtml
@@ -28,8 +28,15 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Item">Add item</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Log in</a>
+                    </li>
                 </ul>
             </div>
+            
             <form method="get" asp-controller="Language" asp-action="Change" class="d-flex ms-2">
                 <select name="culture" onchange="this.form.submit()" class="form-select form-select-sm">
                     <option value="en-GB" selected="@(CultureInfo.CurrentUICulture.Name == "en-GB")">English</option>
