--- a/Shopping.WebUI/Views/Home/Index.cshtml
+++ b/Shopping.WebUI/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject IViewLocalizer Localizer
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Home";
@@ -20,28 +23,28 @@
 
     <h3 class="mb-3">@Localizer["Existing Lists"]:</h3>
     <ul class="list-group">
-        @if (ViewBag.ShoppingLists != null)
-        {
-            foreach (var list in ViewBag.ShoppingLists)
+            @if (ViewBag.ShoppingLists != null)
             {
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a class="text-decoration-none" asp-controller="ShoppingList" asp-action="Details" asp-route-id="@list.Id">
-                        @list.Name
-                    </a>
-                    
-                    <form asp-action="DeleteList" method="post" class="ml-2">
-                        <input type="hidden" name="id" value="@list.Id" />
-                        <button type="submit" class="btn btn-danger btn-sm">
-                            @Localizer["Delete"]
-                        </button>
-                    </form>
-                    
-                </li>
+                foreach (var list in ViewBag.ShoppingLists)
+                {
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <a class="text-decoration-none" asp-controller="ShoppingList" asp-action="Details" asp-route-id="@list.Id">
+                            @list.Name
+                        </a>
+
+                        <form asp-action="DeleteList" method="post" class="ml-2">
+                            <input type="hidden" name="id" value="@list.Id"/>
+                            <button type="submit" class="btn btn-danger btn-sm">
+                                @Localizer["Delete"]
+                            </button>
+                        </form>
+
+                    </li>
+                }
             }
-        }
-        else
-        {
-            <li class="list-group-item">No lists yet.</li>
-        }
+            else
+            {
+                <li class="list-group-item">No lists yet.</li>
+            }
     </ul>
 </div>
